--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "react-project-jack",
   "version": "0.1.0",
-  "homepage": "https://neldrom.github.io/react-project",
   "private": true,
   "proxy": "https://motionless-eel-khakis.cyclic.app",
   "dependencies": {
@@ -17,6 +16,7 @@
     "mongoose": "^7.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
