--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-project-jack",
   "version": "0.1.0",
+  "homepage": "https://neldrom.github.io/react-project",
   "private": true,
   "proxy": "https://motionless-eel-khakis.cyclic.app",
   "dependencies": {
