--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL="https://adorable-singlet-frog.cyclic.app"
+REACT_APP_API_URL="https://fair-bonnet-tick.cyclic.app"
+# REACT_APP_API_URL="http://localhost:5000"
