--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-project-jack",
   "version": "0.1.0",
-  "homepage": "https://neldrom.github.io/react-project",
+  "homepage": "https://neldrom.github.io/react-project-v1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.4",
+    "js-cookie": "^3.0.5",
     "mongodb": "4.1",
     "mongoose": "^7.5.3",
     "react": "^18.2.0",
